--- a/getting-started.html
+++ b/getting-started.html
@@ -31,7 +31,7 @@
 </div>
 </blockquote>
 <p>After importing the asset into Unity, you will be greeted by the support window. In the <em>Configure</em> tab, click on the <em>Detect</em> button. This will verify that everything is set up correctly in your project. If the support window does not open, you can open it by clicking <em>Window > Linework > About and Support</em>.</p>
-<p><img src="./getting-started-1.png" width="424" height="auto" alt/></p>
+<p><img src="./images/getting-started-1.png" width="424" height="auto" alt/></p>
 <p>If the result is showing only green checkmarks, you are good to go! If not, see the <a href="./support/troubleshooting-and-known-limitations" class="internal alias" data-slug="support/troubleshooting-and-known-limitations">Troubleshooting and Known Limitations</a> section or <a href="./support/contact" class="internal" data-slug="support/contact">Contact</a> me.</p>
 <h2 id="adding-outlines-and-fills">Adding Outlines and Fills<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#adding-outlines-and-fills" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h2>
 <p>To get started, open the <em>Universal Renderer Data</em> asset, click on <em>Add Renderer Feature</em> and select the outline/fill effect that you would like to add. Each outline effect stores its settings in a separate object that you can create somewhere in your Assets folder, by right-clicking and selecting <em>Create > Linework > Outline Settings</em>.</p>
@@ -74,8 +74,4 @@
               })
             }
           });
-          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">
-        const socket = new WebSocket('ws://localhost:3001')
-        // reload(true) ensures resources like images and scripts are fetched again in firefox
-        socket.addEventListener('message', () => document.location.reload(true))
-      </script><script src="./postscript.js" type="module"></script></html>
+          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script src="./postscript.js" type="module"></script></html>
