--- a/support/compatibility.html
+++ b/support/compatibility.html
@@ -133,7 +133,7 @@
 
 
 
-<div class="table-container"><table><thead><tr><th>Platform</th><th>Status</th></tr></thead><tbody><tr><td>Windows</td><td>❔ not tested</td></tr><tr><td>macOS</td><td>✅ supported</td></tr><tr><td>Linux</td><td>❔ not tested</td></tr><tr><td>WebGL 1.0</td><td>❔ not tested</td></tr><tr><td>WebGL 2.0</td><td>❔ not tested</td></tr><tr><td>Android</td><td>❔ not tested</td></tr><tr><td>iOS</td><td>❔ not tested</td></tr><tr><td>Playstation 5</td><td>❔ not tested</td></tr><tr><td>Xbox Series X</td><td>❔ not tested</td></tr><tr><td>Nintendo Switch</td><td>❔ not tested</td></tr><tr><td>Playstation 4</td><td>❔ not tested</td></tr><tr><td>Xbox One X</td><td>❔ not tested</td></tr><tr><td>Oculus Quest</td><td>❔ not tested</td></tr><tr><td>Desktop VR</td><td>❔ not tested</td></tr><tr><td>Apple Vision Pro</td><td>❔ not tested</td></tr></tbody></table></div>
+<div class="table-container"><table><thead><tr><th>Platform</th><th>Status</th></tr></thead><tbody><tr><td>Windows</td><td>✅ supported</td></tr><tr><td>macOS</td><td>✅ supported</td></tr><tr><td>Linux</td><td>❔ not tested</td></tr><tr><td>WebGL 1.0</td><td>❔ not tested</td></tr><tr><td>WebGL 2.0</td><td>❔ not tested</td></tr><tr><td>Android</td><td>❔ not tested</td></tr><tr><td>iOS</td><td>❔ not tested</td></tr><tr><td>Playstation 5</td><td>❔ not tested</td></tr><tr><td>Xbox Series X</td><td>❔ not tested</td></tr><tr><td>Nintendo Switch</td><td>❔ not tested</td></tr><tr><td>Playstation 4</td><td>❔ not tested</td></tr><tr><td>Xbox One X</td><td>❔ not tested</td></tr><tr><td>Oculus Quest</td><td>❔ not tested</td></tr><tr><td>Desktop VR</td><td>❔ not tested</td></tr><tr><td>Apple Vision Pro</td><td>❔ not tested</td></tr></tbody></table></div>
 <h2 id="graphics-apis">Graphics APIs<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#graphics-apis" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h2>
 
 
@@ -160,7 +160,15 @@
 
 
 
-<div class="table-container"><table><thead><tr><th>Graphics API</th><th>Status</th></tr></thead><tbody><tr><td>OpenGLES 2.0</td><td>❔ not tested</td></tr><tr><td>OpenGLES 3.0+</td><td>❔ not tested</td></tr><tr><td>Vulkan</td><td>❔ not tested</td></tr><tr><td>Metal</td><td>✅ supported</td></tr></tbody></table></div>
+
+
+
+
+
+
+
+
+<div class="table-container"><table><thead><tr><th>Graphics API</th><th>Status</th></tr></thead><tbody><tr><td>OpenGLCore</td><td>❌ not supported</td></tr><tr><td>OpenGLES3</td><td>❔ not tested</td></tr><tr><td>Vulkan</td><td>✅ supported</td></tr><tr><td>Direct3D11</td><td>✅ supported</td></tr><tr><td>Direct3D12</td><td>❔ not tested</td></tr><tr><td>Metal</td><td>✅ supported</td></tr></tbody></table></div>
 <h2 id="other">Other<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#other" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h2>
 
 
@@ -184,12 +192,46 @@
 
 
 <div class="table-container"><table><thead><tr><th>Batching</th><th>Status</th></tr></thead><tbody><tr><td>SRP Batcher</td><td>✅ supported</td></tr><tr><td>Static Batching</td><td>❌ not supported</td></tr><tr><td>GPU Instancing</td><td>❌ not supported</td></tr></tbody></table></div>
-<p><strong>Render Paths</strong></p>
-<p>❔ Forward</p>
-<p>❔ Deferred</p>
-<p><strong>Space</strong></p>
-<p>❔ Linear</p>
-<p>❔ Gamma</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="table-container"><table><thead><tr><th>Rendering Path</th><th>Status</th></tr></thead><tbody><tr><td>Forward</td><td>✅ supported</td></tr><tr><td>Forward +</td><td>❔ not tested</td></tr><tr><td>Deferred</td><td>❔ not tested</td></tr></tbody></table></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="table-container"><table><thead><tr><th>Color Space</th><th>Status</th></tr></thead><tbody><tr><td>Linear</td><td>✅ supported</td></tr><tr><td>Gamma</td><td>❔ not tested</td></tr></tbody></table></div>
 <h2 id="other-assets">Other Assets<a role="anchor" aria-hidden="true" tabindex="-1" data-no-popover="true" href="#other-assets" class="internal"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"></path><path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"></path></svg></a></h2>
 <p>Linework should not run in any issues with other assets. If you encounter any issues, please see the <a href="../support/contact" class="internal" data-slug="support/contact">Contact</a> section to get in touch.</p></article><hr/><div class="page-footer"></div></div><div class="right sidebar"><div class="graph"><h3>Graph View</h3><div class="graph-outer"><div id="graph-container" data-cfg="{&quot;drag&quot;:true,&quot;zoom&quot;:true,&quot;depth&quot;:1,&quot;scale&quot;:1.1,&quot;repelForce&quot;:0.5,&quot;centerForce&quot;:0.3,&quot;linkDistance&quot;:30,&quot;fontSize&quot;:0.6,&quot;opacityScale&quot;:1,&quot;showTags&quot;:true,&quot;removeTags&quot;:[],&quot;focusOnHover&quot;:false}"></div><svg version="1.1" id="global-graph-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55 55" fill="currentColor" xml:space="preserve"><path d="M49,0c-3.309,0-6,2.691-6,6c0,1.035,0.263,2.009,0.726,2.86l-9.829,9.829C32.542,17.634,30.846,17,29,17
 	s-3.542,0.634-4.898,1.688l-7.669-7.669C16.785,10.424,17,9.74,17,9c0-2.206-1.794-4-4-4S9,6.794,9,9s1.794,4,4,4
@@ -220,8 +262,4 @@
               })
             }
           });
-          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">
-        const socket = new WebSocket('ws://localhost:3001')
-        // reload(true) ensures resources like images and scripts are fetched again in firefox
-        socket.addEventListener('message', () => document.location.reload(true))
-      </script><script src="../postscript.js" type="module"></script></html>
+          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script src="../postscript.js" type="module"></script></html>
