--- a/support/performance.html
+++ b/support/performance.html
@@ -71,8 +71,4 @@ The wider the outline, the more flood iterations need to happen, the slower this
               })
             }
           });
-          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script type="application/javascript">
-        const socket = new WebSocket('ws://localhost:3001')
-        // reload(true) ensures resources like images and scripts are fetched again in firefox
-        socket.addEventListener('message', () => document.location.reload(true))
-      </script><script src="../postscript.js" type="module"></script></html>
+          </script><script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.9/contrib/copy-tex.min.js" type="application/javascript"></script><script src="../postscript.js" type="module"></script></html>
