--- a/support/roadmap.html
+++ b/support/roadmap.html
@@ -79,11 +79,11 @@
 <blockquote class="callout warning" data-callout="warning">
 <div class="callout-title">
                   <div class="callout-icon"></div>
-                  <div class="callout-title-inner"><p>Sprite Support </p></div>
+                  <div class="callout-title-inner"><p>2D/Sprite Support </p></div>
                   
                 </div>
 <div class="callout-content">
-<p>Support for sprites will be added.</p>
+<p>Support for sprites and the 2D URP Renderer will be added.</p>
 </div>
 </blockquote>
 <blockquote class="callout warning" data-callout="warning">
