Update from https://github.com/alexanderameye/linework-docs/commit/bf8e9b7c2279c9e232e67bf2f2172a8bb14b6c91

--- a/edge-detection/index.html
+++ b/edge-detection/index.html
@@ -679,7 +679,7 @@ By combining <em>depth</em>, <em>normals</em> and <em>luminance</em>, the outlin
                             data-reactions-enabled="1"
                             data-emit-metadata="0"
                             data-input-position="top"
-                            data-theme="preferred_color_scheme"
+                            data-theme="light"
                             data-lang="en"
                             data-loading="lazy"
                             crossorigin="anonymous"
