--- a/performance/index.html
+++ b/performance/index.html
@@ -511,7 +511,7 @@ Screenshots are shown in the following order: surface fill, fast outline, soft o
                             data-reactions-enabled="1"
                             data-emit-metadata="0"
                             data-input-position="top"
-                            data-theme="preferred_color_scheme"
+                            data-theme="light"
                             data-lang="en"
                             data-loading="lazy"
                             crossorigin="anonymous"
