--- a/fast-outline/index.html
+++ b/fast-outline/index.html
@@ -607,7 +607,7 @@ The outlines will be reduced in size while zooming out. This will keep the outli
                             data-reactions-enabled="1"
                             data-emit-metadata="0"
                             data-input-position="top"
-                            data-theme="preferred_color_scheme"
+                            data-theme="light"
                             data-lang="en"
                             data-loading="lazy"
                             crossorigin="anonymous"
