--- a/surface-fill/index.html
+++ b/surface-fill/index.html
@@ -627,7 +627,7 @@ To add a fill, click on the <em>Add Fill</em> button. This will add a fill to th
                             data-reactions-enabled="1"
                             data-emit-metadata="0"
                             data-input-position="top"
-                            data-theme="preferred_color_scheme"
+                            data-theme="light"
                             data-lang="en"
                             data-loading="lazy"
                             crossorigin="anonymous"
