--- a/wide-outline/index.html
+++ b/wide-outline/index.html
@@ -611,7 +611,7 @@ To add an outline, click on the <em>Add Outline</em> button. This will add an ou
                             data-reactions-enabled="1"
                             data-emit-metadata="0"
                             data-input-position="top"
-                            data-theme="preferred_color_scheme"
+                            data-theme="light"
                             data-lang="en"
                             data-loading="lazy"
                             crossorigin="anonymous"
