Update from https://github.com/alexanderameye/linework-docs/commit/5938a9df4f98772c0642dea672e27a61866a9a38

--- a/installation-guide/index.html
+++ b/installation-guide/index.html
@@ -454,6 +454,7 @@
             </a> Installing samples</h2>
 <p>Linework comes with a number of samples. You can install these directly from the Package Manager window in Unity (<em>Window &gt; Package Manager</em>). To see the list of samples, select the Linework package in the Package Manager window and click the <em>Samples</em> tab. Then click <em>Import</em> next to any sample name to import it into the current Project.</p>
 <p><picture><source type="image/webp" srcset="/assets/img/DtkSmwDYo_-400.webp 400w, /assets/img/DtkSmwDYo_-800.webp 800w, /assets/img/DtkSmwDYo_-1200.webp 1200w" sizes="(max-width: 800px) 100vw, 800px"><img alt="Installation Guide 2" loading="lazy" decoding="async" src="/assets/img/DtkSmwDYo_-400.jpeg" width="1200" height="379" srcset="/assets/img/DtkSmwDYo_-400.jpeg 400w, /assets/img/DtkSmwDYo_-800.jpeg 800w, /assets/img/DtkSmwDYo_-1200.jpeg 1200w" sizes="(max-width: 800px) 100vw, 800px"></picture></p>
+<p>If you do not see the samples, make sure you are looking at the Linework package from the <em>In Project</em> tab and not from the <em>My Assets</em> tab. The <em>My Assets</em> tab will not contain the samples.</p>
 
                     <footer class="footer">
     <blockquote>
