--- a/changelog/index.html
+++ b/changelog/index.html
@@ -425,6 +425,18 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Changelog</h2>
+<h2 id="%5B1.4.0%5D---unreleased" tabindex="-1"><a class="anchor-link" href="#%5B1.4.0%5D---unreleased" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.0] - Unreleased</h2>
+<h3>Added</h3>
+<ul>
+<li>Wide Outline: Added option to configure outline width on a per-object basis</li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+<li>Fixed HelpUrl documentation links in custom editors</li>
+</ul>
 <h2 id="%5B1.3.3%5D---2025-01-04" tabindex="-1"><a class="anchor-link" href="#%5B1.3.3%5D---2025-01-04" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
