--- a/changelog/index.html
+++ b/changelog/index.html
@@ -77,7 +77,7 @@
                         <h1>Linework</h1>
                     </a>
                     <a href="/changelog">
-                        <p>v1.3.3</p>
+                        <p>v1.3.4</p>
                     </a>
                 </section>
                 <section id="search">
@@ -413,7 +413,7 @@
                     <h1>Changelog</h1>
                     
                     <blockquote>
-<p><strong>Latest Version:</strong> v1.3.3</p>
+<p><strong>Latest Version:</strong> v1.3.4</p>
 </blockquote>
 <p>A look at the past releases of Linework, and what's ahead.</p>
 <h2 id="roadmap" tabindex="-1"><a class="anchor-link" href="#roadmap" target="_blank" rel="noopener noreferrer">
@@ -432,10 +432,20 @@
 <h3>Added</h3>
 <ul>
 <li>Wide Outline: Added option to configure outline width on a per-object basis</li>
+<li>Edge Detection: Added option to fade edge color by height</li>
 </ul>
 <h3>Fixed</h3>
 <ul>
 <li>Fixed HelpUrl documentation links in custom editors</li>
+</ul>
+<h2 id="%5B1.3.4%5D---2025-01-15" tabindex="-1"><a class="anchor-link" href="#%5B1.3.4%5D---2025-01-15" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.3.4] - 2025-01-15</h2>
+<h3>Fixed</h3>
+<ul>
+<li>Unity 2022: Fixed vertex animation not working for wide and soft outline</li>
+<li>Unity 2022: Fixed issue with section map custom rendering option not working</li>
 </ul>
 <h2 id="%5B1.3.3%5D---2025-01-04" tabindex="-1"><a class="anchor-link" href="#%5B1.3.3%5D---2025-01-04" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
