Update from https://github.com/alexanderameye/linework-docs/commit/e20dea2c6f965184a0d7912e0b2832da01ffb558

--- a/guides/change-outlines-at-runtime/index.html
+++ b/guides/change-outlines-at-runtime/index.html
@@ -415,6 +415,9 @@
                     <blockquote>
 <p>✅ <strong>Linework Sample</p></strong><p>This sample explains how to change outline properties at runtime.</p>
 </blockquote>
+<blockquote>
+<p>ℹ️ <strong>Assembly Definitions</p></strong><p>If you are using Assembly Definitions in your project, make sure to add a reference to the Linework assembly.</p>
+</blockquote>
 <p>The configuration of each outline is stored in a settings object.</p>
 <ul>
 <li><code>FastOutlineSettings</code></li>
