--- a/guides/outline-on-hover/index.html
+++ b/guides/outline-on-hover/index.html
@@ -416,6 +416,9 @@
 <p>✅ <strong>Linework Sample</p></strong><p>This sample explains how to enable/disable an outline when hovering over an object or when clicking on it.</p>
 </blockquote>
 <blockquote>
+<p>ℹ️ <strong>Assembly Definitions</p></strong><p>If you are using Assembly Definitions in your project, make sure to add a reference to the Linework assembly.</p>
+</blockquote>
+<blockquote>
 <p>✅ <strong>Prerequisites</p></strong><p><strong>1. Event System</strong></p>
 <p>Make sure that there is an <em>EventSystem</em> in your scene. If not, use <em>Create &gt; UI &gt; Event System</em> to create one.</p>
 <p><strong>2. Physics Raycaster</strong></p>
