--- a/guides/tweens/index.html
+++ b/guides/tweens/index.html
@@ -412,7 +412,10 @@
                 <div class="docs">
                     <h1>Control outlines with tweens</h1>
                     
-                    <h2 id="dotween" tabindex="-1"><a class="anchor-link" href="#dotween" target="_blank" rel="noopener noreferrer">
+                    <blockquote>
+<p>ℹ️ <strong>Assembly Definitions</p></strong><p>If you are using Assembly Definitions in your project, make sure to add a reference to the Linework assembly.</p>
+</blockquote>
+<h2 id="dotween" tabindex="-1"><a class="anchor-link" href="#dotween" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> DOTween</h2>
