--- a/changelog/index.html
+++ b/changelog/index.html
@@ -77,7 +77,7 @@
                         <h1>Linework</h1>
                     </a>
                     <a href="/changelog">
-                        <p>v1.4.0</p>
+                        <p>v1.4.1</p>
                     </a>
                 </section>
                 <section id="search">
@@ -421,7 +421,7 @@
                     <h1>Changelog</h1>
                     
                     <blockquote>
-<p>ℹ️ <strong>Latest Version:</strong> v1.4.0</p>
+<p>ℹ️ <strong>Latest Version:</strong> v1.4.1</p>
 </blockquote>
 <h2 id="roadmap" tabindex="-1"><a class="anchor-link" href="#roadmap" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
@@ -432,6 +432,18 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Changelog</h2>
+<h2 id="%5B1.4.1%5D---2025-02-18" tabindex="-1"><a class="anchor-link" href="#%5B1.4.1%5D---2025-02-18" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.1] - 2025-02-18</h2>
+<h3>Added</h3>
+<ul>
+<li>Surface Fill: Added option to set custom fill material (experimental)</li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+<li>Surface Fill: Fixed issue with glow pattern where secondary color was being set but not needed</li>
+</ul>
 <h2 id="%5B1.4.0%5D---2025-02-17" tabindex="-1"><a class="anchor-link" href="#%5B1.4.0%5D---2025-02-17" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
