--- a/changelog/index.html
+++ b/changelog/index.html
@@ -77,7 +77,7 @@
                         <h1>Linework</h1>
                     </a>
                     <a href="/changelog">
-                        <p>v1.4.1</p>
+                        <p>v1.4.2</p>
                     </a>
                 </section>
                 <section id="search">
@@ -421,7 +421,7 @@
                     <h1>Changelog</h1>
                     
                     <blockquote>
-<p>ℹ️ <strong>Latest Version:</strong> v1.4.1</p>
+<p>ℹ️ <strong>Latest Version:</strong> v1.4.2</p>
 </blockquote>
 <h2 id="roadmap" tabindex="-1"><a class="anchor-link" href="#roadmap" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
@@ -432,6 +432,19 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Changelog</h2>
+<h2 id="%5B1.4.2%5D---2025-02-22" tabindex="-1"><a class="anchor-link" href="#%5B1.4.2%5D---2025-02-22" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.2] - 2025-02-22</h2>
+<h3>Fixed</h3>
+<ul>
+<li>Edge Detection: Fixed depth/height fade variable names</li>
+</ul>
+<h3>Changed</h3>
+<ul>
+<li>Changed from <code>TextureDesc.format</code> to <code>TextureDesc.colorFormat</code> for improved compatibility with older version of Unity 6</li>
+<li>Temporarily disabled fill functionality for section map</li>
+</ul>
 <h2 id="%5B1.4.1%5D---2025-02-18" tabindex="-1"><a class="anchor-link" href="#%5B1.4.1%5D---2025-02-18" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
