Update from https://github.com/alexanderameye/linework-docs/commit/4d1d9e9388c6870d2571da29a8a8767d0bd2ae85

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -77,7 +77,7 @@
                         <h1>Linework</h1>
                     </a>
                     <a href="/changelog">
-                        <p>v1.4.2</p>
+                        <p>v1.4.3</p>
                     </a>
                 </section>
                 <section id="search">
@@ -421,7 +421,7 @@
                     <h1>Changelog</h1>
                     
                     <blockquote>
-<p>ℹ️ <strong>Latest Version:</strong> v1.4.2</p>
+<p>ℹ️ <strong>Latest Version:</strong> v1.4.3</p>
 </blockquote>
 <h2 id="roadmap" tabindex="-1"><a class="anchor-link" href="#roadmap" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
@@ -432,6 +432,19 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Changelog</h2>
+<h2 id="%5B1.4.3%5D---2025-02-22" tabindex="-1"><a class="anchor-link" href="#%5B1.4.3%5D---2025-02-22" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.3] - 2025-02-22</h2>
+<h3>Added</h3>
+<ul>
+<li>Added layer mask filter option to filter outlines/fills by layer in addition to rendering layer</li>
+<li>Surface fill: Added option to set render queue (adds support for transparent objects)</li>
+</ul>
+<h3>Changed</h3>
+<ul>
+<li>Improved section map object ID hash function to reduce ID collisions</li>
+</ul>
 <h2 id="%5B1.4.2%5D---2025-02-22" tabindex="-1"><a class="anchor-link" href="#%5B1.4.2%5D---2025-02-22" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
