Update from https://github.com/alexanderameye/linework-docs/commit/2a41eeedf7ce0119818b2902664b181c501cf8d6

--- a/outline-layers/index.html
+++ b/outline-layers/index.html
@@ -451,6 +451,11 @@
 </div>
 <p>Finally, on your outline or fill itself, you can set the <em>Layer</em> property to the appropriate layer. For our outline we will select Yellow Outline, and for our fill we will select Red Fill.</p>
 <p><picture><source type="image/webp" srcset="/assets/img/aAQnlODOPt-400.webp 400w, /assets/img/aAQnlODOPt-800.webp 800w, /assets/img/aAQnlODOPt-1200.webp 1200w" sizes="(max-width: 800px) 100vw, 800px"><img alt="Pasted image 20241217183150" loading="lazy" decoding="async" src="/assets/img/aAQnlODOPt-400.jpeg" width="1200" height="196" srcset="/assets/img/aAQnlODOPt-400.jpeg 400w, /assets/img/aAQnlODOPt-800.jpeg 800w, /assets/img/aAQnlODOPt-1200.jpeg 1200w" sizes="(max-width: 800px) 100vw, 800px"></picture></p>
+<h2 id="layers" tabindex="-1"><a class="anchor-link" href="#layers" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> Layers</h2>
+<p>Linework also supports regular layers if you wish to use them (or in combination with Rendering Layers).</p>
 
                     <footer class="footer">
     <blockquote>
