Update from https://github.com/alexanderameye/linework-docs/commit/f11c9dee0503c31f46a22a4c7391b90886b4e28b

--- a/changelog/index.html
+++ b/changelog/index.html
@@ -77,7 +77,7 @@
                         <h1>Linework</h1>
                     </a>
                     <a href="/changelog">
-                        <p>v1.4.6</p>
+                        <p>v1.4.9</p>
                     </a>
                 </section>
                 <section id="search">
@@ -445,7 +445,7 @@
                     <h1>Changelog</h1>
                     
                     <blockquote>
-<p>ℹ️ <strong>Latest Version:</strong> v1.4.6</p>
+<p>ℹ️ <strong>Latest Version:</strong> v1.4.9</p>
 </blockquote>
 <h2 id="roadmap" tabindex="-1"><a class="anchor-link" href="#roadmap" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
@@ -456,6 +456,37 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Changelog</h2>
+<h2 id="%5B1.4.9%5D---2025-03-20" tabindex="-1"><a class="anchor-link" href="#%5B1.4.9%5D---2025-03-20" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.9] - 2025-03-20</h2>
+<h3>Added</h3>
+<ul>
+<li>Edge Detection: Added option to exclude renderers from getting outlined</li>
+</ul>
+<h3>Fixed</h3>
+<ul>
+<li>Soft Outline: Fixed dilation shader bleeding over edges of screen</li>
+<li>Edge Detection: Fixed edge detection shader bleeding over edges of screen</li>
+<li>Unity 2022: Fixed edge detection vertex animation not working for Unity 2022</li>
+</ul>
+<h2 id="%5B1.4.8%5D---2025-03-13" tabindex="-1"><a class="anchor-link" href="#%5B1.4.8%5D---2025-03-13" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.8] - 2025-03-13</h2>
+<h3>Fixed</h3>
+<ul>
+<li>Android: Fixed graphics format not being supported</li>
+<li>Fixed some incorrect files being included in 1.4.7</li>
+</ul>
+<h2 id="%5B1.4.7%5D---2025-03-12" tabindex="-1"><a class="anchor-link" href="#%5B1.4.7%5D---2025-03-12" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> [1.4.7] - 2025-03-12</h2>
+<h3>Fixed</h3>
+<ul>
+<li>Addressables: Added additional null checks to prevent errors during addressables build on Windows</li>
+</ul>
 <h2 id="%5B1.4.6%5D---2025-03-08" tabindex="-1"><a class="anchor-link" href="#%5B1.4.6%5D---2025-03-08" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
