Update from https://github.com/alexanderameye/linework-docs/commit/ff7a999f5e8bea3cf7c9cfeef99b311e879999f0

--- a/free-outline/index.html
+++ b/free-outline/index.html
@@ -499,6 +499,16 @@
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Installing the package</h2>
 <p>See <a href="/installation-guide">Installation Guide</a>. The installation process for Free Outline is the same as for Linework (other than the package names being different).</p>
+<h2 id="updating-the-package" tabindex="-1"><a class="anchor-link" href="#updating-the-package" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> Updating the package</h2>
+<p>To update Linework, see <a href="https://docs.unity3d.com/Manual/upm-ui-update2.html" target="_blank" rel="noopener noreferrer">https://docs.unity3d.com/Manual/upm-ui-update2.html</a>.</p>
+<h2 id="removing-the-package" tabindex="-1"><a class="anchor-link" href="#removing-the-package" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> Removing the package</h2>
+<p>To remove Linework, see <a href="https://docs.unity3d.com/Manual/upm-ui-remove.html" target="_blank" rel="noopener noreferrer">https://docs.unity3d.com/Manual/upm-ui-remove.html</a>.</p>
 <h2 id="adding-an-outline-renderer" tabindex="-1"><a class="anchor-link" href="#adding-an-outline-renderer" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
