--- a/installation-guide/index.html
+++ b/installation-guide/index.html
@@ -503,7 +503,12 @@
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
             </a> Updating the package</h2>
-<p>The update Linework, see <a href="https://docs.unity3d.com/Manual/upm-ui-update2.html" target="_blank" rel="noopener noreferrer">https://docs.unity3d.com/Manual/upm-ui-update2.html</a>.</p>
+<p>To update Linework, see <a href="https://docs.unity3d.com/Manual/upm-ui-update2.html" target="_blank" rel="noopener noreferrer">https://docs.unity3d.com/Manual/upm-ui-update2.html</a>.</p>
+<h2 id="removing-the-package" tabindex="-1"><a class="anchor-link" href="#removing-the-package" target="_blank" rel="noopener noreferrer">
+              <span class="screen-reader-only">Jump to heading</span>
+              <span aria-hidden="true" class="anchor-symbol">#</span>
+            </a> Removing the package</h2>
+<p>To remove Linework, see <a href="https://docs.unity3d.com/Manual/upm-ui-remove.html" target="_blank" rel="noopener noreferrer">https://docs.unity3d.com/Manual/upm-ui-remove.html</a>.</p>
 <h2 id="checking-for-compatibility-issues" tabindex="-1"><a class="anchor-link" href="#checking-for-compatibility-issues" target="_blank" rel="noopener noreferrer">
               <span class="screen-reader-only">Jump to heading</span>
               <span aria-hidden="true" class="anchor-symbol">#</span>
